--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_CONNECTION_STRING=sqlite:///../test.sqlite
 HACKER_NEWS_BASE_URL=https://hacker-news.firebaseio.com/v0
+DEFAULT_USER_EMAIL=test@test.com
