--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,65 @@
 annotated-types==0.7.0
+beautifulsoup4==4.14.3
 bertopic==0.17.3
 certifi==2025.10.5
 charset-normalizer==3.4.4
+click==8.3.1
+cssselect==1.3.0
+exceptiongroup==1.3.1
+feedfinder2==0.0.4
+feedparser==6.0.12
 filelock==3.20.0
 fsspec==2025.10.0
 hdbscan==0.8.40
 hf-xet==1.2.0
 huggingface-hub==0.36.0
 idna==3.11
+iniconfig==2.3.0
+jieba3k==0.35.1
 Jinja2==3.1.6
 joblib==1.5.2
 llvmlite==0.45.1
+lxml==6.0.2
 MarkupSafe==3.0.3
 mpmath==1.3.0
 narwhals==2.12.0
 networkx==3.4.2
+newspaper3k==0.2.8
+nltk==3.9.2
 numba==0.62.1
 numpy==2.2.6
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
 plotly==6.5.0
+pluggy==1.6.0
 praw==7.8.1
 prawcore==2.4.0
 pydantic==2.12.4
 pydantic_core==2.41.5
+Pygments==2.19.2
 pynndescent==0.5.13
+pytest==9.0.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
+requests-file==3.0.1
 safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.15.3
 sentence-transformers==5.1.2
+sgmllib3k==1.0.0
 six==1.17.0
+soupsieve==2.8.1
 SQLAlchemy==2.0.44
 sympy==1.14.0
 threadpoolctl==3.6.0
+tinysegmenter==0.3
+tldextract==5.3.0
 tokenizers==0.22.1
+tomli==2.3.0
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.3
