--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 annotated-types==0.7.0
 beautifulsoup4==4.14.3
-bertopic==0.17.3
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.1
@@ -20,6 +19,7 @@ Jinja2==3.1.6
 joblib==1.5.2
 llvmlite==0.45.1
 lxml==6.0.2
+lxml_html_clean==0.4.3
 MarkupSafe==3.0.3
 mpmath==1.3.0
 narwhals==2.12.0
@@ -27,14 +27,9 @@ networkx==3.4.2
 newspaper3k==0.2.8
 nltk==3.9.2
 numba==0.62.1
-numpy==2.2.6
 packaging==25.0
-pandas==2.3.3
 pillow==12.0.0
-plotly==6.5.0
 pluggy==1.6.0
-praw==7.8.1
-prawcore==2.4.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 Pygments==2.19.2
