--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
+annotated-doc==0.0.4
 annotated-types==0.7.0
+anyio==4.12.0
 beautifulsoup4==4.14.3
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.1
 cssselect==1.3.0
+dnspython==2.8.0
+email-validator==2.3.0
 exceptiongroup==1.3.1
+fastapi==0.127.0
+fastapi-cli==0.0.20
+fastapi-cloud-cli==0.8.0
+fastar==0.8.0
 feedfinder2==0.0.4
 feedparser==6.0.12
 filelock==3.20.0
 fsspec==2025.10.0
+h11==0.16.0
 hdbscan==0.8.40
 hf-xet==1.2.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
 huggingface-hub==0.36.0
 idna==3.11
 iniconfig==2.3.0
@@ -20,7 +32,9 @@ joblib==1.5.2
 llvmlite==0.45.1
 lxml==6.0.2
 lxml_html_clean==0.4.3
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+mdurl==0.1.2
 mpmath==1.3.0
 narwhals==2.12.0
 networkx==3.4.2
@@ -31,24 +45,34 @@ packaging==25.0
 pillow==12.0.0
 pluggy==1.6.0
 pydantic==2.12.4
+pydantic-extra-types==2.10.6
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 pynndescent==0.5.13
 pytest==9.0.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-multipart==0.0.21
 pytz==2025.2
 PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
 requests-file==3.0.1
+rich==14.2.0
+rich-toolkit==0.17.1
+rignore==0.7.6
 safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.15.3
 sentence-transformers==5.1.2
+sentry-sdk==2.48.0
 sgmllib3k==1.0.0
+shellingham==1.5.4
 six==1.17.0
 soupsieve==2.8.1
 SQLAlchemy==2.0.44
+starlette==0.50.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 tinysegmenter==0.3
@@ -58,10 +82,15 @@ tomli==2.3.0
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.3
+typer==0.21.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 umap-learn==0.5.9.post2
 update-checker==0.18.0
 urllib3==2.5.0
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
 websocket-client==1.9.0
+websockets==15.0.1
