--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,8 @@ networkx==3.4.2
 newspaper3k==0.2.8
 nltk==3.9.2
 numba==0.62.1
+numpy==2.2.6
+ollama==0.6.1
 packaging==25.0
 pillow==12.0.0
 pluggy==1.6.0
