--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.18.1
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
@@ -32,6 +33,7 @@ joblib==1.5.2
 llvmlite==0.45.1
 lxml==6.0.2
 lxml_html_clean==0.4.3
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
@@ -46,6 +48,7 @@ ollama==0.6.1
 packaging==25.0
 pillow==12.0.0
 pluggy==1.6.0
+psycopg2-binary==2.9.11
 pydantic==2.12.4
 pydantic-extra-types==2.10.6
 pydantic-settings==2.12.0
